@@ -2,9 +2,10 @@ Revision history for Perl extension Apache::Request.
 
 =over 4
 
-=item 0.30_04 - May 11, 1999
+=item 0.30_04
 
-make sure ApacheRequest_new() is handed the main request_rec
+pass Apache::/Apache::SubRequest:: object to sv_magic, so it does not
+go out of scope until the Apache::Request object does
 
 =item 0.30_03 - May 5, 1999
 
